--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,59 @@ body {
     padding: 0;
 }
 
+.notesTitle {
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 26px;
+}
 #noteFormContainer { 
-    border: 2px red dotted;
+    /* display: flex; */
+    /* border: 2px red dotted; */
+    background-color: darkgrey;
     margin: 10px;
+    /* flex-flow: wrap column; */
+}
+
+.actualFormContainer { 
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.allNotesHere{
+    padding: 12px;
+}
+
+.note{
+    margin-bottom: 20px;
+}
+
+.noteListContainer { 
+    display: flex;
+    flex-direction: column;
+    width: 20em;
+    /* flex: 2 1 36%; */
+    /* margin-left: -25px; */
+    /* max-width: 400px; */
+    /* float: left; */
+    background-color: darkcyan;
+}
+
+#noteForm--text {
+    margin: 5px;
+    max-width: 100%;
+}
+
+#noteForm--criminal {
+    margin: 5px;
+}
+
+#saveNote {
+    margin: 5px;
+}
+
+.formTitle {
+    margin: 8px;
 }
 
 header {
@@ -47,23 +97,40 @@ h2 {
 }
 
 .criminalsContainer { 
-    /* border: red dotted 2px; */
+    border: red dotted 2px;
+    padding: 20px;
     display: flex;
-    /* flex: 2 0 100%; */
+    /* grid-gap: 1em; defines both grid-row-gap and grid-column-gap (1em for both) */
+
+    flex: 1 1 50%;
+    /* max-width: 870px; */
     flex-wrap: wrap;
-    margin: 50px 50px;
     justify-content: left;
-    min-width: 825px;
+    /* min-width: 825px; */
 }
 
+.card {
+    border: solid lightgray 1px;
+    /* border-radius: 0.5em; */
+    background-color: rgb(250, 250, 250);
+    margin: 20px 10px;
+    padding: 8px;
+    min-width: 250px;
+}
+
+.witnessCard { 
+    background-color: darkgrey;
+    width: 300px;
+    height: 100px;
+}
 
 .criminalCard {
-    flex: 2 0 25%;
-    border: dotted black 2px;
-    margin: 20px 20px;
+    flex: 2 1 25%;
+    /* border: dotted black 2px; */
+    margin: 20px 10px;
     padding: 8px;
-    max-width: 25%;
-    min-width: 215px;
+    min-width: 250px;
+    /* min-width: 215px; */
 }
 
 .crim-card-info {
@@ -75,11 +142,35 @@ h2 {
     margin: 2px 0;
 }
 
-.noteListContainer { 
-    float: left;
-    background-color: darkcyan;
-    width: 50px;
-    height: 400px;
+.alibi-btn-holder {
+    padding: 2px;
+}
+
+.alibiDialogBox {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.hidden { 
+    display: none;
+}
+
+.alibiDialogBox > h4 {
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+.alibiDialogBox > div {
+    margin-bottom: 10px;
+}
+
+
+.crims-and-notes { 
+    display: flex;
+    flex-direction: row;
+    margin: 50px 25px;
+    border: 2px dashed darkgreen;
+    min-width: 550px;
 }
 
 footer {
